FIX: vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,16 @@ body {
     background-color: #F6F8F9;
 }
 
-header img{
-    vertical-align: middle;
-}
-
-header h1 {
-    vertical-align: middle;
-    display: inline-block;
-    font-size: 35px;
-}
-
 header {
     background-color: white;
     padding: 10px;
     margin-bottom: 30px;
+}
+
+
+.vertical {
+    vertical-align: middle;
+    display: inline-block;
 }
 
 .container {
